2017-06-01  David Malcolm  <dmalcolm@redhat.com>

	* lib/gcc-dg.exp: Ensure GCC_COLORS is unset.

2017-06-01  Pierre-Marie de Rodat  <derodat@adacore.com>

	* debug12.adb, debug12.ads: New testcase.

2017-06-01  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/80898
	* gcc.dg/tree-ssa/pr80898.c: New test.
	* gcc.dg/tree-ssa/pr80898-2.c: Likewise.

2017-06-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/80896
	* g++.dg/cpp1z/nodiscard5.C: New.

2017-06-01  Claudiu Zissulescu  <claziss@synopsys.com>

	* gcc.target/arc/pr9001195952.c: New test.

2017-06-01  Tom de Vries  <tom@codesourcery.com>

	* c-c++-common/pr43395.c: Add dg-require-effective-target label_values.
	* gcc.c-torture/compile/asmgoto-1.c: Same.
	* gcc.dg/20000707-1.c: Same.
	* gcc.dg/pr38700.c: Same.
	* gcc.dg/pr70169.c: Same.
	* gcc.dg/pr80112.c: Same.
	* gcc.dg/torture/pr51071-2.c: Same.
	* gcc.dg/torture/pr51071.c: Same.
	* gcc.dg/tree-ssa/alias-34.c: Same.

2017-06-01  Pierre-Marie de Rodat  <derodat@adacore.com>

	* gnat.dg/debug11.adb: New testcase.

2017-06-01  Richard Biener  <rguenther@suse.de>

	PR middle-end/66313
	* c-c++-common/ubsan/pr66313.c: New testcase.
	* gcc.dg/tree-ssa/loop-15.c: Adjust.

2017-05-31  Steven Munroe  <munroesj@gcc.gnu.org>

	* gcc.target/powerpc/bmi2-pdep32-1.c: Add -mcpu=power7 to
        dg-options.  Change dg-require-effective-target powerpc_vsx_ok
        to vsx_hw.  Add dg-skip-if directive to disable this test if
	-mcpu overridden.
	* gcc.target/powerpc/bmi2-pdep64-1.c: Likewise.
	* gcc.target/powerpc/bmi2-pext32-1.c: Likewise.
	* gcc.target/powerpc/bmi2-pext64-1.c: Likewise.
	* gcc.target/powerpc/bmi2-pext64-1a.c: Add -mcpu=power7
	to dg-option.  Add dg-skip-if directive to disable this test
	for darwin.  Add dg-skip-if directive to disable this test if
	-mcpu overridden.

2017-05-31  Sebastian Peryt  <sebastian.peryt@intel.com>

	* gcc.target/i386/avx512f-vmaxsd-1.c (_mm_mask_max_sd)
	(_mm_maskz_max_sd): Test new intrinsics.